--- a/assets/index.less
+++ b/assets/index.less
@@ -1,4 +1,4 @@
-@prefixClass: rc-slider;
+@prefixClass: rce-slider;
 
 @disabledColor: #ccc;
 @border-radius-base: 6px;
@@ -228,7 +228,7 @@
     animation-timing-function: @ease-in-quint;
   }
 }
-.zoom-motion(rc-slider-tooltip-zoom-down, rcSliderTooltipZoomDown);
+.zoom-motion(rce-slider-tooltip-zoom-down, rcSliderTooltipZoomDown);
 
 @keyframes rcSliderTooltipZoomDownIn {
   0% {
