--- a/common.css
+++ b/common.css
@@ -1,4 +1,4 @@
-.rc-slider {
+.rce-slider {
   position: relative;
   height: 14px;
   padding: 5px 0;
@@ -9,25 +9,25 @@
   box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-.rc-slider * {
+.rce-slider * {
   box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-.rc-slider-rail {
+.rce-slider-rail {
   position: absolute;
   width: 100%;
   background-color: #e9e9e9;
   height: 4px;
   border-radius: 6px;
 }
-.rc-slider-track {
+.rce-slider-track {
   position: absolute;
   left: 0;
   height: 4px;
   border-radius: 6px;
   background-color: #abe2fb;
 }
-.rc-slider-handle {
+.rce-slider-handle {
   position: absolute;
   margin-left: -7px;
   margin-top: -5px;
@@ -42,28 +42,32 @@
   -ms-touch-action: pan-x;
       touch-action: pan-x;
 }
-.rc-slider-handle:hover {
+.rce-slider-handle:focus {
+  border-color: #57c5f7;
+  box-shadow: 0 0 0 5px #96dbfa;
+  outline: none;
+}
+.rce-slider-handle-click-focused:focus {
+  border-color: #96dbfa;
+  box-shadow: unset;
+}
+.rce-slider-handle:hover {
   border-color: #57c5f7;
 }
-.rc-slider-handle:active {
+.rce-slider-handle:active {
   border-color: #57c5f7;
   box-shadow: 0 0 5px #57c5f7;
   cursor: -webkit-grabbing;
   cursor: grabbing;
 }
-.rc-slider-handle:focus {
-  border-color: #57c5f7;
-  box-shadow: 0 0 0 5px #96dbfa;
-  outline: none;
-}
-.rc-slider-mark {
+.rce-slider-mark {
   position: absolute;
   top: 18px;
   left: 0;
   width: 100%;
   font-size: 12px;
 }
-.rc-slider-mark-text {
+.rce-slider-mark-text {
   position: absolute;
   display: inline-block;
   vertical-align: middle;
@@ -71,16 +75,16 @@
   cursor: pointer;
   color: #999;
 }
-.rc-slider-mark-text-active {
+.rce-slider-mark-text-active {
   color: #666;
 }
-.rc-slider-step {
+.rce-slider-step {
   position: absolute;
   width: 100%;
   height: 4px;
   background: transparent;
 }
-.rc-slider-dot {
+.rce-slider-dot {
   position: absolute;
   bottom: -2px;
   margin-left: -4px;
@@ -92,93 +96,93 @@
   border-radius: 50%;
   vertical-align: middle;
 }
-.rc-slider-dot-active {
+.rce-slider-dot-active {
   border-color: #96dbfa;
 }
-.rc-slider-disabled {
+.rce-slider-disabled {
   background-color: #e9e9e9;
 }
-.rc-slider-disabled .rc-slider-track {
+.rce-slider-disabled .rce-slider-track {
   background-color: #ccc;
 }
-.rc-slider-disabled .rc-slider-handle,
-.rc-slider-disabled .rc-slider-dot {
+.rce-slider-disabled .rce-slider-handle,
+.rce-slider-disabled .rce-slider-dot {
   border-color: #ccc;
   box-shadow: none;
   background-color: #fff;
   cursor: not-allowed;
 }
-.rc-slider-disabled .rc-slider-mark-text,
-.rc-slider-disabled .rc-slider-dot {
+.rce-slider-disabled .rce-slider-mark-text,
+.rce-slider-disabled .rce-slider-dot {
   cursor: not-allowed !important;
 }
-.rc-slider-vertical {
+.rce-slider-vertical {
   width: 14px;
   height: 100%;
   padding: 0 5px;
 }
-.rc-slider-vertical .rc-slider-rail {
+.rce-slider-vertical .rce-slider-rail {
   height: 100%;
   width: 4px;
 }
-.rc-slider-vertical .rc-slider-track {
+.rce-slider-vertical .rce-slider-track {
   left: 5px;
   bottom: 0;
   width: 4px;
 }
-.rc-slider-vertical .rc-slider-handle {
+.rce-slider-vertical .rce-slider-handle {
   margin-left: -5px;
   margin-bottom: -7px;
   -ms-touch-action: pan-y;
       touch-action: pan-y;
 }
-.rc-slider-vertical .rc-slider-mark {
+.rce-slider-vertical .rce-slider-mark {
   top: 0;
   left: 18px;
   height: 100%;
 }
-.rc-slider-vertical .rc-slider-step {
+.rce-slider-vertical .rce-slider-step {
   height: 100%;
   width: 4px;
 }
-.rc-slider-vertical .rc-slider-dot {
+.rce-slider-vertical .rce-slider-dot {
   left: 2px;
   margin-bottom: -4px;
 }
-.rc-slider-vertical .rc-slider-dot:first-child {
+.rce-slider-vertical .rce-slider-dot:first-child {
   margin-bottom: -4px;
 }
-.rc-slider-vertical .rc-slider-dot:last-child {
+.rce-slider-vertical .rce-slider-dot:last-child {
   margin-bottom: -4px;
 }
-.rc-slider-tooltip-zoom-down-enter,
-.rc-slider-tooltip-zoom-down-appear {
+.rce-slider-tooltip-zoom-down-enter,
+.rce-slider-tooltip-zoom-down-appear {
   animation-duration: .3s;
   animation-fill-mode: both;
   display: block !important;
   animation-play-state: paused;
 }
-.rc-slider-tooltip-zoom-down-leave {
+.rce-slider-tooltip-zoom-down-leave {
   animation-duration: .3s;
   animation-fill-mode: both;
   display: block !important;
   animation-play-state: paused;
 }
-.rc-slider-tooltip-zoom-down-enter.rc-slider-tooltip-zoom-down-enter-active,
-.rc-slider-tooltip-zoom-down-appear.rc-slider-tooltip-zoom-down-appear-active {
+.rce-slider-tooltip-zoom-down-enter.rce-slider-tooltip-zoom-down-enter-active,
+.rce-slider-tooltip-zoom-down-appear.rce-slider-tooltip-zoom-down-appear-active {
   animation-name: rcSliderTooltipZoomDownIn;
   animation-play-state: running;
 }
-.rc-slider-tooltip-zoom-down-leave.rc-slider-tooltip-zoom-down-leave-active {
+.rce-slider-tooltip-zoom-down-leave.rce-slider-tooltip-zoom-down-leave-active {
   animation-name: rcSliderTooltipZoomDownOut;
   animation-play-state: running;
 }
-.rc-slider-tooltip-zoom-down-enter,
-.rc-slider-tooltip-zoom-down-appear {
+.rce-slider-tooltip-zoom-down-enter,
+.rce-slider-tooltip-zoom-down-appear {
   transform: scale(0, 0);
   animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
 }
-.rc-slider-tooltip-zoom-down-leave {
+.rce-slider-tooltip-zoom-down-leave {
   animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
 }
 @keyframes rcSliderTooltipZoomDownIn {
@@ -203,7 +207,7 @@
     transform: scale(0, 0);
   }
 }
-.rc-slider-tooltip {
+.rce-slider-tooltip {
   position: absolute;
   left: -9999px;
   top: -9999px;
@@ -211,17 +215,17 @@
   box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-.rc-slider-tooltip * {
+.rce-slider-tooltip * {
   box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-.rc-slider-tooltip-hidden {
+.rce-slider-tooltip-hidden {
   display: none;
 }
-.rc-slider-tooltip-placement-top {
+.rce-slider-tooltip-placement-top {
   padding: 4px 0 8px 0;
 }
-.rc-slider-tooltip-inner {
+.rce-slider-tooltip-inner {
   padding: 6px 2px;
   min-width: 24px;
   height: 24px;
@@ -234,14 +238,14 @@
   border-radius: 6px;
   box-shadow: 0 0 4px #d9d9d9;
 }
-.rc-slider-tooltip-arrow {
+.rce-slider-tooltip-arrow {
   position: absolute;
   width: 0;
   height: 0;
   border-color: transparent;
   border-style: solid;
 }
-.rc-slider-tooltip-placement-top .rc-slider-tooltip-arrow {
+.rce-slider-tooltip-placement-top .rce-slider-tooltip-arrow {
   bottom: 4px;
   left: 50%;
   margin-left: -4px;
